--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Create an IP address by index and subnet",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [
     "ip",
@@ -14,5 +14,8 @@
     "subnet"
   ],
   "author": "David Kamer",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "jest": "^24.1.0"
+  }
 }
