--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   "author": "David Kamer",
   "license": "MIT",
   "repository": {
-	  "type": "git",
-	  "url": "https://github.com/UniWrighte/ip-blocks.git"
+    "type": "git",
+    "url": "https://github.com/UniWrighte/ip-blocks.git"
   },
   "devDependencies": {
+    "ip-range-generator": "^1.0.1",
     "jest": "^24.1.0"
   }
 }
